--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: "Montserrat", sans-serif;
+  background-color: #f8f8f8;
 }
 
 header {
@@ -8,7 +9,7 @@ header {
 }
 
 .caja {
-  width: 940px;
+  width: 100%;
   position: relative;
   margin: 0px auto;
 }
@@ -16,7 +17,7 @@ header {
 nav {
   position: absolute;
   top: 110px;
-  right: 0px;
+  right: 10rem;
 }
 
 nav li {
@@ -33,7 +34,7 @@ nav a {
 }
 
 nav a:hover {
-  color: rgb(40, 89, 224);
+  color: orange;
   text-decoration: underline;
 }
 
@@ -97,7 +98,13 @@ footer {
 }
 
 form {
-  margin: 40px 0 0 40px;
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 4rem auto;
+  padding: 2rem 0;
+  box-shadow: 5px 5px 10px 0px rgb(228, 228, 228);
 }
 
 form label,
@@ -111,7 +118,9 @@ form legend {
   display: block;
   margin: 0 0 20px;
   padding: 10px 25px;
-  width: 30%;
+  width: 60%;
+  border: 0.5px solid rgb(204, 204, 204) ;
+  border-radius: 3px;
 }
 
 .checkbox {
@@ -123,7 +132,7 @@ form legend {
   background-color: orange;
   border-radius: 10px;
   border: none;
-  font-size: 12px;
+  font-size: 1rem;
   color: white;
   padding: 15px 0px;
   transition: 0.5s all;
@@ -136,13 +145,15 @@ form legend {
 }
 
 table {
-  margin: 40px;
+  margin: 4rem auto;
 }
+
 thead {
   background-color: #555555;
   color: white;
   font-weight: bold;
 }
+
 td,
 th {
   border: 1px solid black;
